# cmctoolkit

./: .gitignore  examples.ipynb  filt_index.txt  pyproject.toml  setup.py
src/: __init__.py
src/cmctoolkit/: cmctoolkit.py
src/cmctoolkit/filterfunctions/: filt_index.txt
